apps/base/traefik/traefik-dashboard/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
  namespace: traefik

  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.staging.homelab.mantannest.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService

  tls:
    secretName: traefik-staging-homelab-mantannest-com-tls
